Lager historikkinnslag for FaktaUttakOverstyringshåndterer, FaktaUttakOppdaterer, BehandlingOpprettingTjeneste og fikser AbstractTestScenario slik at en kan validere genererte historikkinnslag uten DB.